--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "next": "13.4.11",
     "postcss": "8.4.27",
     "react": "18.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "18.2.0",
+    "react-select": "^5.7.4",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
