--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
+    "antd": "^5.7.3",
     "autoprefixer": "10.4.14",
+    "firebase": "^10.1.0",
     "next": "13.4.11",
     "postcss": "8.4.27",
+    "quill": "^1.3.7",
     "react": "18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "18.2.0",
+    "react-quill": "^2.0.0",
     "react-select": "^5.7.4",
+    "sass": "^1.64.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
