--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
     "react-quill": "^2.0.0",
     "react-select": "^5.7.4",
     "sass": "^1.64.1",
