--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-NEXT_PUBLIC_FIREBASE_API_KEY='AIzaSyBhLwrYqg35T2lJRwI8dWb5rvLGfYEzpVw'
-NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN='docs-b6ac2.firebaseapp.com'
-NEXT_PUBLIC_FIREBASE_PROJECT_ID='docs-b6ac2'
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET='docs-b6ac2.appspot.com'
-NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID='237106934578'
-NEXT_PUBLIC_FIREBASE_APP_ID='1:237106934578:web:f6b9919b1439146c37dd2b'
-NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID='G-16KQXT6J3Z'
+NEXT_PUBLIC_FIREBASE_API_KEY=''
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=''
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=''
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=''
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=''
+NEXT_PUBLIC_FIREBASE_APP_ID=''
+NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=''
